--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,17 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Yuga</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
+
+        <!-- build:css(.tmp) styles/yuga-admin.css -->
+        <link rel="stylesheet/less" type="text/css" href="styles/yuga-admin.less"/>
         <!-- endbuild -->
+
+        <script src="bower_components/less.js/dist/less-1.4.2.js"></script>
 </head>
   <body ng-app="yugaAdminApp">
     <!--[if lt IE 7]>
@@ -26,7 +29,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+    <div class="container" ng-view></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -41,10 +44,11 @@
 
 
         <!-- build:js scripts/plugins.js -->
+        <script src="bower_components/jquery/jquery.js"></script>
+        <script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
-        <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -54,6 +58,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/ElementsListCtrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
