--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
 
         <!-- build:js scripts/modules.js -->
         <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-ui/build/angular-ui.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
