added domain objects

--- a/app/index.html
+++ b/app/index.html
@@ -58,8 +58,14 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/modules/command.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/ElementsListCtrl.js"></script>
+        <script src="scripts/domain/domain-object.js"></script>
+        <script src="scripts/domain/timeline.js"></script>
+        <script src="scripts/domain/event.js"></script>
+        <script src="scripts/domain/type.js"></script>
+        <script src="scripts/controllers/elements-list-ctrl.js"></script>
+        <script src="scripts/controllers/edit-screen-ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
