different edit screens

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,8 @@
         <script src="scripts/domain/type.js"></script>
         <script src="scripts/controllers/elements-list-ctrl.js"></script>
         <script src="scripts/controllers/edit-timeline-ctrl.js"></script>
+        <script src="scripts/controllers/edit-type-ctrl.js"></script>
+        <script src="scripts/controllers/edit-aspect-ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
