--- a/app/index.html
+++ b/app/index.html
@@ -57,17 +57,23 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/modules/command.js"></script>
-        <script src="scripts/modules/resource-bundle.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+
         <script src="scripts/domain/domain-object.js"></script>
         <script src="scripts/domain/timeline.js"></script>
         <script src="scripts/domain/event.js"></script>
         <script src="scripts/domain/type.js"></script>
+        <script src="scripts/domain/aspect.js"></script>
+
+        <script src="scripts/modules/command.js"></script>
+        <script src="scripts/modules/resource-bundle.js"></script>
+        <script src="scripts/modules/application-state.js"></script>
+
+        <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/elements-list-ctrl.js"></script>
         <script src="scripts/controllers/edit-timeline-ctrl.js"></script>
         <script src="scripts/controllers/edit-type-ctrl.js"></script>
         <script src="scripts/controllers/edit-aspect-ctrl.js"></script>
+        <script src="scripts/controllers/edit-event-ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
