added application events

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 
         <script src="bower_components/less.js/dist/less-1.4.2.js"></script>
 </head>
-  <body ng-app="yugaAdminApp">
+  <body ng-app="yugaAdmin">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -67,6 +67,7 @@
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/resource-bundle.js"></script>
         <script src="scripts/modules/application-state.js"></script>
+        <script src="scripts/modules/application-events.js"></script>
 
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/elements-list-ctrl.js"></script>
