--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
 
+        <script src="scripts/directives.js"></script>
+
         <script src="scripts/domain/domain-object.js"></script>
         <script src="scripts/domain/timeline.js"></script>
         <script src="scripts/domain/event.js"></script>
