--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,9 @@
         <script src="scripts/domain/type.js"></script>
         <script src="scripts/domain/aspect.js"></script>
 
+        <script src="scripts/commands/command.js"></script>
+        <script src="scripts/commands/select-element-command.js"></script>
+
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/resource-bundle.js"></script>
         <script src="scripts/modules/application-state.js"></script>
