--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
 
         <script src="scripts/commands/command.js"></script>
         <script src="scripts/commands/select-element-command.js"></script>
+        <script src="scripts/commands/add-aspect-to-event-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/resource-bundle.js"></script>
