--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/commands/select-element-command.js"></script>
         <script src="scripts/commands/add-aspect-to-event-command.js"></script>
         <script src="scripts/commands/change-property-command.js"></script>
+        <script src="scripts/commands/add-field-to-type-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/resource-bundle.js"></script>
