added classes, commands for local aspects

--- a/app/index.html
+++ b/app/index.html
@@ -65,11 +65,13 @@
         <script src="scripts/domain/event.js"></script>
         <script src="scripts/domain/type.js"></script>
         <script src="scripts/domain/aspect.js"></script>
+        <script src="scripts/domain/local-aspect.js"></script>
 
         <script src="scripts/commands/command.js"></script>
         <script src="scripts/commands/select-element-command.js"></script>
         <script src="scripts/commands/add-aspect-to-event-command.js"></script>
         <script src="scripts/commands/change-property-command.js"></script>
+        <script src="scripts/commands/change-local-aspect-property-command.js"></script>
         <script src="scripts/commands/add-field-to-type-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
