--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,8 @@
         <script src="scripts/commands/change-property-command.js"></script>
         <script src="scripts/commands/change-local-aspect-property-command.js"></script>
         <script src="scripts/commands/add-field-to-type-command.js"></script>
+        <script src="scripts/commands/new-event-command.js"></script>
+        <script src="scripts/commands/new-aspect-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/resource-bundle.js"></script>
