--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <script src="scripts/commands/add-field-to-type-command.js"></script>
         <script src="scripts/commands/new-event-command.js"></script>
         <script src="scripts/commands/new-aspect-command.js"></script>
+        <script src="scripts/commands/new-type-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/resource-bundle.js"></script>
