--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
 
+        <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
         <!-- build:css(.tmp) styles/yuga-admin.css -->
         <link rel="stylesheet/less" type="text/css" href="styles/yuga-admin.less"/>
         <!-- endbuild -->
@@ -46,6 +48,7 @@
         <!-- build:js scripts/plugins.js -->
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
