--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
         <script src="scripts/modules/application-events.js"></script>
 
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/header-ctrl.js"></script>
         <script src="scripts/controllers/elements-list-ctrl.js"></script>
         <script src="scripts/controllers/edit-timeline-ctrl.js"></script>
         <script src="scripts/controllers/edit-type-ctrl.js"></script>
