--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,8 @@
 
 
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-        <!-- build:css(.tmp) styles/yuga-admin.css -->
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="bower_components/jquery.colorpicker/jquery.colorpicker.css" type="text/css" />
         <link rel="stylesheet/less" type="text/css" href="styles/yuga-admin.less"/>
         <!-- endbuild -->
 
@@ -49,6 +49,7 @@
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="bower_components/jquery.colorpicker/jquery.colorpicker.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
