--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/domain/type.js"></script>
         <script src="scripts/domain/aspect.js"></script>
         <script src="scripts/domain/local-aspect.js"></script>
+        <script src="scripts/domain/field.js"></script>
 
         <script src="scripts/commands/command.js"></script>
         <script src="scripts/commands/select-element-command.js"></script>
