moved strings to new resource bundle

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,8 @@
 
         <script src="scripts/directives.js"></script>
 
+        <script src="scripts/resource-bundle.js"></script>
+
         <script src="scripts/domain/domain-object.js"></script>
         <script src="scripts/domain/timeline.js"></script>
         <script src="scripts/domain/event.js"></script>
@@ -83,7 +85,6 @@
         <script src="scripts/commands/new-type-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
-        <script src="scripts/modules/resource-bundle.js"></script>
         <script src="scripts/modules/application-state.js"></script>
         <script src="scripts/modules/application-events.js"></script>
 
