--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
 
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/header-ctrl.js"></script>
+        <script src="scripts/controllers/title-bar-ctrl.js"></script>
         <script src="scripts/controllers/elements-list-ctrl.js"></script>
         <script src="scripts/controllers/edit-timeline-ctrl.js"></script>
         <script src="scripts/controllers/edit-type-ctrl.js"></script>
