svg manipulation for timeline

--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
         <script src="scripts/controllers/edit-type-ctrl.js"></script>
         <script src="scripts/controllers/edit-aspect-ctrl.js"></script>
         <script src="scripts/controllers/edit-event-ctrl.js"></script>
+        <script src="scripts/controllers/timeline-ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
