replaced datepicker with ama3-anytime

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -15,6 +16,7 @@
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" href="bower_components/jquery.colorpicker/jquery.colorpicker.css" type="text/css" />
+        <link rel="stylesheet" href="bower_components/ama3-anytime/styles/anytime.css" type="text/css" />
         <link rel="stylesheet/less" type="text/css" href="styles/yuga-admin.less"/>
         <!-- endbuild -->
 
@@ -47,6 +49,9 @@
 
         <!-- build:js scripts/plugins.js -->
         <script src="bower_components/jquery/jquery.js"></script>
+        <script src="bower_components/jquery/jquery-migrate.js"></script>
+        <script src="bower_components/datejs/build/date.js"></script>
+        <script src="bower_components/ama3-anytime/anytime.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="bower_components/jquery.colorpicker/jquery.colorpicker.js"></script>
