split timeline widget into own file

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/directives.js"></script>
 
         <script src="scripts/resource-bundle.js"></script>
+        <script src="scripts/timeline-widget.js"></script>
 
         <script src="scripts/domain/domain-object.js"></script>
         <script src="scripts/domain/timeline.js"></script>
