--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/commands/new-event-command.js"></script>
         <script src="scripts/commands/new-aspect-command.js"></script>
         <script src="scripts/commands/new-type-command.js"></script>
+        <script src="scripts/commands/delete-event-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/application-state.js"></script>
