--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,8 @@
         <script src="scripts/commands/new-aspect-command.js"></script>
         <script src="scripts/commands/new-type-command.js"></script>
         <script src="scripts/commands/delete-event-command.js"></script>
+        <script src="scripts/commands/delete-aspect-command.js"></script>
+        <script src="scripts/commands/delete-type-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/application-state.js"></script>
