--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
         <script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="bower_components/jquery.colorpicker/jquery.colorpicker.js"></script>
+        <script src="bower_components/sprintf/src/sprintf.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
