--- a/app/index.html
+++ b/app/index.html
@@ -108,6 +108,7 @@
         <script src="scripts/controllers/edit-aspect-ctrl.js"></script>
         <script src="scripts/controllers/edit-event-ctrl.js"></script>
         <script src="scripts/controllers/timeline-ctrl.js"></script>
+        <script src="scripts/controllers/confirm-modal-ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
