--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
         <script src="scripts/commands/command.js"></script>
         <script src="scripts/commands/select-element-command.js"></script>
         <script src="scripts/commands/add-aspect-to-event-command.js"></script>
+        <script src="scripts/commands/remove-aspect-from-event-command.js"></script>
         <script src="scripts/commands/change-property-command.js"></script>
         <script src="scripts/commands/change-properties-command.js"></script>
         <script src="scripts/commands/change-local-aspect-property-command.js"></script>
