clone elements, deep linking

--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/commands/delete-type-command.js"></script>
         <script src="scripts/commands/clone-event-command.js"></script>
         <script src="scripts/commands/clone-type-command.js"></script>
+        <script src="scripts/commands/clone-aspect-command.js"></script>
 
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/application-state.js"></script>
