--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
         <script src="scripts/modules/command.js"></script>
         <script src="scripts/modules/application-state.js"></script>
         <script src="scripts/modules/application-events.js"></script>
+        <script src="scripts/modules/timeline.js"></script>
 
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/header-ctrl.js"></script>
