--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
         <script src="scripts/controllers/edit-event-ctrl.js"></script>
         <script src="scripts/controllers/timeline-ctrl.js"></script>
         <script src="scripts/controllers/confirm-modal-ctrl.js"></script>
+        <script src="scripts/controllers/generic-modal-ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
