open timeline modal created (not functional)

--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,7 @@
         <script src="scripts/controllers/timeline-ctrl.js"></script>
         <script src="scripts/controllers/confirm-modal-ctrl.js"></script>
         <script src="scripts/controllers/generic-modal-ctrl.js"></script>
+        <script src="scripts/controllers/open-timeline-modal-ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
