cascading delete type, fields

--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/commands/change-properties-command.js"></script>
         <script src="scripts/commands/change-local-aspect-property-command.js"></script>
         <script src="scripts/commands/add-field-to-type-command.js"></script>
+        <script src="scripts/commands/remove-field-from-type-command.js"></script>
         <script src="scripts/commands/new-event-command.js"></script>
         <script src="scripts/commands/new-aspect-command.js"></script>
         <script src="scripts/commands/new-type-command.js"></script>
